Rename file to be more descriptive

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -191,6 +191,6 @@
     <% end %>
   </style>
 
-  <%= javascript_include_tag 'init/sort_centres' %>
+  <%= javascript_include_tag 'init/sort_centres_by_geolocation' %>
 <% end %>
 
