--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Special tile design with specific icon centred in the middle, typically used on the sub pages e.g. 'Centre Services'.
+  Special tile design with specific icon centred in the middle, typically used on the sub pages e.g. 'Centre Services'.
 
-  Demo:
-    Style Guide -> Modules -> Promo Tile
+  Styleguide Promo Tile
 */
 
 .promo-tile {
