--- a/app/assets/stylesheets/partials/modules/_social-follow.scss
+++ b/app/assets/stylesheets/partials/modules/_social-follow.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    List of social media follow links, currently only being used in the 'Follow Us' section of the 'Centre info' page.
+  List of social media follow links, currently only being used in the 'Follow Us' section of the 'Centre info' page.
 
-  Demo:
-    Style Guide -> Modules -> Social Follow
+  Styleguide Social Follow
 */
 
 .social-follow .icon:before {
