--- a/app/assets/stylesheets/partials/modules/_social-share.scss
+++ b/app/assets/stylesheets/partials/modules/_social-share.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		List of social media share links used in the detail views and on the pin board tiles, the default styles are set for the detail views.
+	List of social media share links used in the detail views and on the pin board tiles, the default styles are set for the detail views.
 
-	Demo:
-		Style Guide -> Modules -> Social Share
+  Styleguide Social Share
 */
 
 $share-facebook: #355f9f !default;
