--- a/app/assets/stylesheets/partials/modules/_tags.scss
+++ b/app/assets/stylesheets/partials/modules/_tags.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Tags typically used when filtering.
+  Tags typically used when filtering.
 
-  Demo:
-    Style Guide -> Modules -> Tags
+  Styleguide Tags
 */
 
 .tags {
