Clean up CSS for map level counts and reduce map pin image and make SVG

--- a/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
+++ b/app/assets/javascripts/map/micello/map_theme.js.coffee.erb
@@ -35,9 +35,9 @@ map.micello = customTheme:
         'Telephone': '<%= image_path "micello-map-icons/png/telephones.png" %>'
 
   pin:
-    src: '<%= image_path 'icon_map_pointer.png' %>'
-    ox: 9
-    oy: 30
+    src: '<%= image_path 'icon_map_pointer.svg' %>'
+    ox: 5
+    oy: 18
 
   themeFamily: 'Standard'
 
