--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -381,9 +381,14 @@
 
           /* Increase padding at this breakpoint */
           @include respond-min($non-palm) {
-            @include to-rem(padding-top padding-bottom, $spacing-sixth);
+            @include to-rem(padding-top padding-bottom, $spacing-sixth+2);
           }
         }
+
+          /* Decrease location icon size at this breakpoint */
+          @include respond-min($ipad-landscape) {
+            .icon--pin:before {@include font-size(23, 1);}
+          }
       }
 
     /* List / Detail views */
@@ -478,7 +483,7 @@
       .is-filter-applied & .stores-list__store-name {
 
         @include respond-min($ipad-landscape) {
-          @include to-rem(padding-left, $spacing-base+$spacing-quarter);
+          @include to-rem(padding-left, $spacing-base);
         }
 
         .icon--pin:before {
@@ -488,8 +493,8 @@
             display: block;
             position: absolute;
             left: 0;
-            @include to-rem(top, $spacing-base+$spacing-micro);
-            @include to-rem(margin-top, -$spacing-sixth);
+            @include to-rem(top, $spacing-base+1);
+            @include font-size(23, 1);
           }
         }
       }
