--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,15 @@
 <% end %>
 
 <% content_for :section_nav do %>
-  <%= render '/layouts/section_nav' %>
+  <%= render layout: '/layouts/section_nav' do %>
+    <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
+        render(
+          :collection => @super_categories,
+          :partial => '/shared/categories/super_cat_nav',
+          :as => :category
+        )
+      -%></ul>
+  <% end %>
 <% end %>
 
 <h1 class="hide-visually">Products</h1>
