--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,8 +1,9 @@
 <% content_for :section_nav do %>
   <%= render layout: '/layouts/section_nav' do %>
-    <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><% if @campaigns.present? %><li><%= link_to 'All Deals', centre_deals_path(@centre), 'ng-class' => "{'is-active': (activeNavigationItem == '')}", class: active_link?( params[ :campaign_code ], nil ) -%></li><% end %><%-
-      @campaigns.each do |campaign| -%><li><%= link_to campaign.name, centre_campaign_path(@centre, campaign.code), 'ng-class' => "{'is-active': (activeNavigationItem == '#{campaign.code}')}", class: active_link?( campaign.code, params[ :campaign_code ] ) -%></li><%- end -%></ul>
+    <li><%= link_to 'All Deals', centre_deals_path(@centre), 'ng-class' => "{'is-active': (activeNavigationItem == '')}", class: active_link?( params[ :campaign_code ], nil ) -%></li><%-
+      @campaigns.each do |campaign| -%><li><%= link_to campaign.name, centre_campaign_path(@centre, campaign.code), 'ng-class' => "{'is-active': (activeNavigationItem == '#{campaign.code}')}", class: active_link?( campaign.code, params[ :campaign_code ] ) -%></li><%- end -%>
   <%- end -%>
+
 <% end if @campaigns.present? %>
 
 <h1 class="hide-visually">Deals</h1>
