Update modules after PR feedback

--- a/app/assets/stylesheets/partials/modules/_pin-board.scss
+++ b/app/assets/stylesheets/partials/modules/_pin-board.scss
@@ -9,8 +9,7 @@
 */
 
 /*
-  Notes:
-    The pin board's layout (no of columns) is controlled via JS except at palm size where it's always 2 columns.
+  Notes: The pin board's layout (no of columns) is controlled via JS except at palm size where it's always 2 columns.
 */
 
 .pin-board {
