--- a/app/views/styleguide/modules/_pager.html.erb
+++ b/app/views/styleguide/modules/_pager.html.erb
@@ -9,8 +9,9 @@
       <span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
       Prev
     </a>
-    <a class="pager__next btn btn--pointer btn--main btn--main-white" href="#" rel="next">Next
-        <span class="icon icon--arrow-right-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
+    <a class="pager__next btn btn--pointer btn--main btn--main-white" href="#" rel="next">
+      Next
+      <span class="icon icon--arrow-right-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
     </a>
   </div>
 </nav>
