--- a/app/views/styleguide/modules/_promo_tile.html.erb
+++ b/app/views/styleguide/modules/_promo_tile.html.erb
@@ -5,7 +5,7 @@
   <div class="islet island-non-palm">
     <h2 class="promo-tile__hdr">Centre Services</h2>
     <p>Centre Concierge, Giftcards and a list of services available.</p>
-    <a href="/bondijunction/services">View Centre Services</a>
+    <a href="#">View Centre Services</a>
   </div>
 </div>
 <% end %>
