--- a/app/views/styleguide/modules/_tags.html.erb
+++ b/app/views/styleguide/modules/_tags.html.erb
@@ -8,6 +8,12 @@
       </button>
     </li>
     <li>
+      <button type="button" class="tags__btn btn">
+        <span class="txt-truncate">colette by colette hayman</span>
+        <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
+      </button>
+    </li>
+    <li>
       <button type="button" class="tags__btn tags__btn--clear btn">
         <span class="txt-truncate">Clear all</span>
         <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
