--- a/app/views/styleguide/modules/_social_follow.html.erb
+++ b/app/views/styleguide/modules/_social_follow.html.erb
@@ -1,5 +1,8 @@
 <%= styleguide_block 'Social Follow' do |style| %>
-<a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+<ul class="grid grid--mrg-base-non-palm grid--non-linear">
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
   <div class="flag__img">
     <div class="box islet">
       <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
@@ -7,4 +10,63 @@
   </div>
   <div class="flag__body">Facebook</div>
 </a>
+  </li>
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+      <div class="flag__img">
+        <div class="box islet">
+          <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+        </div>
+      </div>
+      <div class="flag__body">Twitter</div>
+    </a>
+  </li>
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+      <div class="flag__img">
+        <div class="box islet">
+          <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+        </div>
+      </div>
+      <div class="flag__body">Instagram</div>
+    </a>
+  </li>
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+      <div class="flag__img">
+        <div class="box islet">
+          <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+        </div>
+      </div>
+      <div class="flag__body">Pinterest</div>
+    </a>
+  </li>
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+      <div class="flag__img">
+        <div class="box islet">
+          <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+        </div>
+      </div>
+      <div class="flag__body">YouTube</div>
+    </a>
+  </li>
+
+  <li class="grid__item one-half non-palm-one-quarter">
+    <a href="#" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+      <div class="flag__img">
+        <div class="box islet">
+          <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+        </div>
+      </div>
+      <div class="flag__body">Google+</div>
+    </a>
+  </li>
+
+</ul>
+
 <% end %>
