--- a/app/views/styleguide/modules/_social_share.html.erb
+++ b/app/views/styleguide/modules/_social_share.html.erb
@@ -1,5 +1,5 @@
 <%= styleguide_block 'Social Share' do |style| %>
-<div class="social-share drop-down-container js-social-share" data-url="http://www.westfield.com.au/bondijunction/products/47944/social-share" aria-live="polite" aria-atomic="true">
+<div class="social-share drop-down-container js-social-share" data-url="/styleguide/static/social_share" aria-live="polite" aria-atomic="true">
 
   <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true" aria-expanded="false">
 
@@ -18,6 +18,7 @@
     <%# //Button text %>
 
   </button>
+
 
 </div>
 <% end %>
