--- a/app/views/stores/_tiles.html.erb
+++ b/app/views/stores/_tiles.html.erb
@@ -1,4 +1,4 @@
-<div class="storefront__featured__item storefront__featured__item--<%= kind.pluralize %> island-ends">
+<div class="storefront__featured__item island-ends">
   <div class="container">
     <h2 class="storefront__featured__hdr"><%= heading %> from <%= store.name %></h2>
     <ul class="grid grid--gutter-half grid--mrg-half">
