Style guide modules: tile, timeline, txt-formatted

--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -3,11 +3,11 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Renders a tile for different types of content e.g. a 'Product', 'Deal', 'Event', etc. Mainly used in pin board module.
+  Renders a tile for different types of content e.g. a 'Product', 'Deal', 'Event', etc. Mainly used in pin board module.
 
-  Demo:
-    Style Guide -> Modules -> Tile
+  .tile--deals      Deals
+
+  Styleguide Tile
 */
 
 .tile {
