--- a/app/assets/stylesheets/partials/modules/_timeline.scss
+++ b/app/assets/stylesheets/partials/modules/_timeline.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    A timeline typically for an event.
+  A timeline typically for an event.
 
-  Demo:
-    Style Guide -> Modules -> Timeline
+  Styleguide Timeline
 */
 
 .timeline {
