--- a/app/views/styleguide/modules.html.erb
+++ b/app/views/styleguide/modules.html.erb
@@ -5,3 +5,33 @@
 <%= render 'styleguide/modules/deal_main' %>
 
 <%= render 'styleguide/modules/drop_down_menu' %>
+
+<%= render 'styleguide/modules/feedback' %>
+
+<%= render 'styleguide/modules/fine_print' %>
+
+<%= render 'styleguide/modules/hero' %>
+
+<%= render 'styleguide/modules/list_divider' %>
+
+<%= render 'styleguide/modules/nav_contextual' %>
+
+<%= render 'styleguide/modules/no_content_fallback_msg' %>
+
+<%= render 'styleguide/modules/pager' %>
+
+<%= render 'styleguide/modules/pin_board' %>
+
+<%= render 'styleguide/modules/preloader' %>
+
+<%= render 'styleguide/modules/promo_tile' %>
+
+<%= render 'styleguide/modules/social_follow' %>
+
+<%= render 'styleguide/modules/social_share' %>
+
+<%= render 'styleguide/modules/tags' %>
+
+<%= render 'styleguide/modules/timeline' %>
+
+<%= render 'styleguide/modules/txt_formatted' %>
