Style guide widgets: flexslider, tabs

--- a/app/assets/stylesheets/partials/modules/widgets/_tabs.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_tabs.scss
@@ -4,6 +4,8 @@
 
 /*
 	Similar to the accordion in terms of preserving screen real estate but a tabbed interface is typically rendered horizontally not vertically and rather than 'expanding' and 'collapsing' each item the item simply appears and you can only ever see one item at a time.
+
+	Styleguide Tabs
 */
 
 /* Tab nav */
