Minor updates to style guide based on PR feedback

--- a/app/views/styleguide/modules/_timeline.html.erb
+++ b/app/views/styleguide/modules/_timeline.html.erb
@@ -7,9 +7,9 @@
       <abbr title="January">Jan</abbr>
     </em>
   </dt>
-    <dd>
-      <time datetime="2014-01-15T09:00+1100" itemprop="startDate">9:00am</time> – <time datetime="2014-01-15T17:30+1100" itemprop="endDate">5:30pm</time>
-    </dd>
+  <dd>
+    <time datetime="2014-01-15T09:00+1100" itemprop="startDate">9:00am</time> &#8211; <time datetime="2014-01-15T17:30+1100" itemprop="endDate">5:30pm</time>
+  </dd>
   <dt>
     Tuesday
     <em class="timeline__date">
@@ -17,8 +17,8 @@
       <abbr title="February">Feb</abbr>
     </em>
   </dt>
-    <dd>
-      <time datetime="2014-02-04T09:00+1100" itemprop="startDate">9:00am</time> – <time datetime="2014-02-04T17:30+1100" itemprop="endDate">5:30pm</time>
-    </dd>
+  <dd>
+    <time datetime="2014-02-04T09:00+1100" itemprop="startDate">9:00am</time> &#8211; <time datetime="2014-02-04T17:30+1100" itemprop="endDate">5:30pm</time>
+  </dd>
 </dl>
 <% end %>
