--- a/app/views/styleguide/modules/widgets/_flexslider.html.erb
+++ b/app/views/styleguide/modules/widgets/_flexslider.html.erb
@@ -12,7 +12,7 @@
 
 <%# flexslider--gallery %>
 <% example '.flexslider--gallery' do %>
-<div class="flexslider $modifier_class js-flexslider--lrg-img">
+<div class="flexslider $modifier_class js-flexslider-lrg-img">
   <ul class="slides">
     <li>
       <img alt="" src="http://placehold.it/2048x760&text=First image">
@@ -27,7 +27,7 @@
 
 <%# flexslider--thumbs %>
 <% example '.flexslider--thumbs' do %>
-<div class="flexslider flexslider--gallery $modifier_class js-flexslider--thumbs">
+<div class="flexslider flexslider--gallery $modifier_class js-flexslider-thumbs">
   <ul class="slides">
     <li><img alt="" height="74" width="74" src="http://placehold.it/74x74&text=A"></li>
     <li><img alt="" height="74" width="74" src="http://placehold.it/74x74&text=B"></li>
@@ -47,14 +47,14 @@
     // Get the count of flexslider items
     var flexsliderItemsCount = $('.flexslider .slides li').length;
     // Flexslider thumbs
-    var flexsliderThumbs = $('.js-flexslider--thumbs');
+    var flexsliderThumbs = $('.js-flexslider-thumbs');
 
     // Only initialise flexslider if more than 2 items
     if (flexsliderItemsCount > 2) {
 
       // Thumbnails
       flexsliderThumbs.addClass('is-multiple-items');
-      $('.js-flexslider--thumbs').flexslider({
+      $('.js-flexslider-thumbs').flexslider({
         animation: 'slide',
         animationSpeed: 200,
         multipleKeyboard: true,
@@ -64,7 +64,7 @@
         itemWidth: 76,
         itemMargin: 3,
         slideshow: false,
-        asNavFor: '.js-flexslider--lrg-img',
+        asNavFor: '.js-flexslider-lrg-img',
         // Do stuff when the slider loads the first slide
         start: function(slider) {
           // Add some ARIA
@@ -75,7 +75,7 @@
       });
 
       // Large image
-      $('.js-flexslider--lrg-img').flexslider({
+      $('.js-flexslider-lrg-img').flexslider({
         animationSpeed: 50,
         multipleKeyboard: true,
         slideshow: false,
